Minor readability improvements